upgrade to ACF Pro, switch database away from staging

--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "gulp-postcss": "^7.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.3",
-    "materialize-css": "^1.0.0-rc.2"
+    "gulp-sourcemaps": "^2.6.3"
+  },
+  "dependencies": {
+    "bootstrap": "^4.1.2",
+    "popper.js": "^1.14.3"
   }
 }
